--- a/examples/lesson36-htmlcss/before/css/styles.css
+++ b/examples/lesson36-htmlcss/before/css/styles.css
@@ -235,6 +235,18 @@ body {
   }
   /* End Header */
 
+  /* Footer*/
+.panel-footer section {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.panel-footer section:nth-child(3) {
+  margin-bottom: 0;
+}
+.panel-footer section hr {
+  width: 50%;
+}
+
   /* Home Page */
   .container .jumbotron {
     margin-top: 30px;
